2000-11-13 16:09:09  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mml2015.el (mml2015-mailcrypt-decrypt): Handle quit.
	(mml2015-mailcrypt-clear-decrypt): Ditto.
	(mml2015-mailcrypt-verify): Ditto.
	(mml2015-mailcrypt-clear-verify): Ditto.
	(mml2015-gpg-verify): Ditto.

2000-11-13 15:29:58  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* smime.el (smime-openssl-program): Test the existence of openssl.
	* mml-smime.el: Require mm-decode.
	(mml-smime-verify-test): New function.
	* mm-decode.el (mm-verify-function-alist): Use it.

2000-11-13 09:50:29  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-sum.el (gnus-summary-repair-multipart): Fix Mime-Version
	anyway.

2000-11-13  Simon Josefsson  <sj@extundo.com>

	* mm-uu.el (mm-uu-pgp-signed-extract): Explain why clear
	verification doesn't work.

2000-11-12 23:36:45  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-msg.el (gnus-inews-mark-gcc-as-read): New variable.
	(gnus-inews-do-gcc): Use it.

2000-11-12 21:35:04  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* rfc2231.el (rfc2231-encode-string): Insert semi-colon and
	leading space.
	* mm-extern.el (mm-inline-external-body): Report error when no 
	access-type.

2000-11-12 19:48:30  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-sum.el (gnus-select-newsgroup): Change the error message.

2000-11-12 11:53:18  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (gnus-mime-button-menu): Use select-window.

2000-11-12 09:47:54  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (gnus-mime-display-part): Display multipart/related
	as multipart/mixed.

2000-11-12  David Edmondson  <dme@dme.org>
	
	* message.el (message-cite-prefix-regexp): moved from gnus-cite.el
	and replace `.' with `\w' to allow for different syntax tables
	(from Vladimir Volovich).
	* message.el (message-newline-and-reformat): use
	`message-cite-prefix-regexp'.
	* gnus-cite.el (gnus-supercite-regexp): use
	`message-cite-prefix-regexp'.
	* gnus-cite.el (gnus-cite-parse): use
	`message-cite-prefix-regexp'.
